--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -16,6 +16,6 @@ jobs:
           SHOW_TITLE: true
           BLOCKS: .■
           TIME_RANGE: last_7_days
-          SHOW_TIME: false
+          SHOW_TIME: true
           SHOW_MASKED_TIME: false
           LANG_COUNT: 10
